# Harness_Tutorial

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: GLOSSARY.md  NOTEBOOK_AUTHORING.md  SYLLABUS.md
harness_agent/: __init__.py  agent.py  config.py  delegate.py  observations.py  types.py
harness_agent/acp/: __init__.py  server.py
harness_agent/cli/: __init__.py  main.py
harness_agent/cron/: __init__.py  (+1 more)
harness_agent_tutorial.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
labs/: SOUL.md
notebooks/: .graphify_detect.json  .graphify_uncached.txt  ch00_introduction.ipynb  ch01_llm_tool_calling.ipynb  ch02_messages_and_providers.ipynb  ch03_agent_loop.ipynb  ch04_tool_registry.ipynb  ch05_observations_and_recovery.ipynb  ch06_session_storage.ipynb  ch07_prompt_assembly.ipynb  ch08_skills_system.ipynb  ch09_memory_and_user_model.ipynb  ch10_closed_learning_loop.ipynb  ch11_context_compression.ipynb  ch12_subagents_and_delegate.ipynb  ch13_mcp_integration.ipynb  ch14_cron_scheduler.ipynb  ch15_gateway_and_cli.ipynb  ch16_provider_resolution.ipynb  ch17_terminal_backends.ipynb  ch18_acp_integration.ipynb  ch19_trajectories_and_batch.ipynb  ch20_plugins_and_hooks.ipynb  ch21_full_system_integration.ipynb  ch22_langgraph_deepagents_sandbox.ipynb  ch23_production_observability.ipynb  ch24_scalable_multi_tenant.ipynb  ch25_reliability_and_resilience.ipynb  ch26_capstone_incident_response_bot.ipynb  ch27_capstone_self_improving_agent.ipynb  ch28_capstone_customer_support_agent.ipynb
tests/: test_basic.py  test_delegate.py
(+84 files in other folders)
