[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-agent-tutorial"
version = "0.1.0"
description = "Harness Agent — learn to build a self-improving agent harness from scratch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "pydantic>=2.7.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "mcp>=1.0.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "nbformat>=5.10.0",
    "pytest>=8.0.0",
]
sandbox = [
    "e2b-code-interpreter>=1.0.0",
]

[project.scripts]
harness-agent = "harness_agent.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["harness_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
